--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.94 2004/10/14 09:23:32 krzyzak Exp $
+dnl $Id: configure.in,v 1.95 2004/10/14 12:02:27 krzyzak Exp $
 
 m4_define([gg2_version],[2.0.6])
 
@@ -111,6 +111,9 @@ AC_TYPE_SIGNAL
 AC_FUNC_STRFTIME
 AC_FUNC_VPRINTF
 AC_CHECK_FUNCS([memset mkdir strcasecmp strchr strlen])
+
+dnl AM_PROG_LIBTOOL
+AM_MAINTAINER_MODE
 
 
 AC_CHECK_HEADERS(libintl.h)
