- remove useless mozilla-plugin part of code (krzak)

--- a/contrib/Makefile.am
+++ b/contrib/Makefile.am
@@ -2,8 +2,4 @@ if BUILD_GGHIST
 GGHIST=gghist
 endif
 
-if BUILD_MOZILLA
-MOZILLA=mozilla-plugin
-endif
-
-SUBDIRS = $(GGHIST) $(MOZILLA)
+SUBDIRS = $(GGHIST)
