--- a/src/plugins/gadu_gadu/libgadu/lib/libgadu-config.h.in
+++ b/src/plugins/gadu_gadu/libgadu/lib/libgadu-config.h.in
@@ -34,7 +34,11 @@
 #endif
 
 /* Defined if libgadu was compiled and linked with pthread support. */
+#ifndef HAVE_PTHREAD
 #undef __GG_LIBGADU_HAVE_PTHREAD
+#else
+#define __GG_LIBGADU_HAVE_PTHREAD 1
+#endif
 
 /* Defined if this machine has C99-compiliant vsnprintf(). */
 #ifndef HAVE_C99_VSNPRINTF
