--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
-dnl $Id: configure.in,v 1.106 2004/11/18 10:22:03 krzyzak Exp $
+dnl $Id: configure.in,v 1.107 2004/11/18 13:34:32 krzyzak Exp $
 
-m4_define([gg2_version],[2.2.2])
+m4_define([gg2_version],[2.2.3])
 
 AC_INIT(gg2,[gg2_version])
 AM_INIT_AUTOMAKE([gg2],[gg2_version])
@@ -458,6 +458,17 @@ else
 	AC_SUBST(DBUS_CFLAGS)
 	AC_SUBST(DBUS_LIBS)
 fi
+AC_ARG_WITH(dbus-dir,[  --with-dbus-dir=PFX   Prefix where D-BUS services are installed (/usr/share/dbus-1.0/services)],
+            dbus_dir="$withval", dbus_dir="")
+	    
+if test x$dbus_dir != x ; then
+     DBUS_DIR="$dbus_dir/"
+else
+     DBUS_DIR="/usr/share/dbus-1.0/services/"
+fi
+
+AC_SUBST(DBUS_DIR)
+
 
 AC_ARG_WITH(docklet_system_tray, [  --without-docklet-system-tray	  Build without docklet plugin])
 if test "x$with_docklet_system_tray" != "xno"; then 
