--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -25,5 +25,6 @@ src/plugins/remote/remote_plugin.c
 src/plugins/sms/sms_core.c
 src/plugins/sms/sms_gui.c
 src/plugins/dbus/dbus_plugin.c
+src/plugins/aaway/aaway.c
 src/plugins/update/update_plugin.c
 src/plugins/history/external/history_viewer.c
