--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.109 2004/12/14 12:19:41 krzyzak Exp $
+dnl $Id: configure.in,v 1.110 2004/12/22 15:56:22 krzyzak Exp $
 
 m4_define([gg2_version],[2.2.3])
 
@@ -238,6 +238,7 @@ if test x$with_all_plugins = xyes; then
     with_remote=yes
     with_dbus=yes
     with_aaway=yes
+    with_ignore=yes
     with_external=yes
     with_history_external_viewer=yes
     with_update=yes
@@ -440,10 +441,26 @@ if test "x$with_sms" != "xno"; then
 fi
 
 AC_ARG_WITH(aaway, [  --without-aaway		  Build without auto away plugin])
-if test "x$with_aaway" != "xno"; then 
+if test "x$with_aaway" != "xno"; then
+	PKG_CHECK_MODULES(GTK,gtk+-2.0 >= 2.4.0,[],AC_MSG_ERROR($GTK_PKG_ERRORS))
+	AAWAY_LIBS="$GTK_LIBS -lXss -lXt -lXext"
+	AAWAY_CFLAGS="$GTK_CFLAGS"
+	AC_SUBST(AAWAY_CFLAGS)
+	AC_SUBST(AAWAY_LIBS)
+	AC_SUBST(GTK_CFLAGS)
+	AC_SUBST(GTK_LIBS)
 	with_aaway=yes
     else
 	with_aaway=no
+fi
+
+AC_ARG_WITH(ignore, [  --with-ignore		  Build without ignore plugin])
+if test "x$with_ignore" != "xyes"; then 
+	with_ignore=no
+    else
+	with_ignore=yes
+	AC_SUBST(IGNORE_CFLAGS)
+	AC_SUBST(IGNORE_LIBS)
 fi
 
 AC_ARG_WITH(remote, [  --with-remote		  Build with remote plugin])
@@ -609,6 +626,7 @@ AM_CONDITIONAL(BUILD_SOUND_EXTERNAL, test "$with_external" = "yes")
 AM_CONDITIONAL(BUILD_HISTORY_EXTERNAL_VIEWER_PLUGIN, test "$with_history_external_viewer" = "yes")
 AM_CONDITIONAL(BUILD_SMS, test "$with_sms" = "yes")
 AM_CONDITIONAL(BUILD_AAWAY, test "$with_aaway" = "yes")
+AM_CONDITIONAL(BUILD_IGNORE, test "$with_ignore" = "yes")
 AM_CONDITIONAL(BUILD_REMOTE, test "$with_remote" = "yes")
 AM_CONDITIONAL(BUILD_DBUS, test "$with_dbus" = "yes")
 AM_CONDITIONAL(BUILD_UPDATE, test "$with_update" = "yes")
@@ -686,6 +704,7 @@ src/plugins/tlen/Makefile
 src/plugins/jabber/Makefile
 src/plugins/xosd/Makefile
 src/plugins/aaway/Makefile
+src/plugins/ignore/Makefile
 src/plugins/docklet/Makefile
 src/plugins/docklet/system-tray/Makefile
 src/plugins/docklet/dockapp/Makefile
@@ -733,6 +752,7 @@ echo Build plugin sound OSS................. : $with_oss
 echo Build plugin sound external............ : $with_external
 echo Build plugin sms....................... : $with_sms
 echo Build plugin Auto Away................. : $with_aaway
+echo Build plugin Ignore.................... : $with_ignore
 echo Build plugin update.................... : $with_update
 echo Build plugin external history viewer... : $with_history_external_viewer
 echo Build plugin remote.................... : $with_remote
