search for X libraries for aaway plugin (krzak)

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.111 2004/12/23 11:59:55 krzyzak Exp $
+dnl $Id: configure.in,v 1.112 2004/12/25 16:08:14 krzyzak Exp $
 
 m4_define([gg2_version],[2.2.3])
 
@@ -18,6 +18,7 @@ AC_PROG_CPP
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_LN_S
+AC_PATH_X
 
 AC_DEFINE_UNQUOTED(INSTALLPREFIX, "${prefix}")
 
@@ -440,11 +441,15 @@ if test "x$with_sms" != "xno"; then
 	with_sms=no
 fi
 
+
 AC_ARG_WITH(aaway, [  --without-aaway		  Build without auto away plugin])
 if test "x$with_aaway" != "xno"; then
 	PKG_CHECK_MODULES(GTK,gtk+-2.0 >= 2.4.0,[],AC_MSG_ERROR($GTK_PKG_ERRORS))
-	AAWAY_LIBS="$GTK_LIBS -lXss -lXt -lXext"
-	AAWAY_CFLAGS="$GTK_CFLAGS"
+	
+	AC_PATH_XTRA
+	
+	AAWAY_LIBS="$GTK_LIBS $X_LIBS $X_EXTRA_LIBS -lXss"
+	AAWAY_CFLAGS="$GTK_CFLAGS $X_CFLAGS"
 	AC_SUBST(AAWAY_CFLAGS)
 	AC_SUBST(AAWAY_LIBS)
 	AC_SUBST(GTK_CFLAGS)
